# rust-libbigwig

./: .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs
src/: bindings.rs  bw_writer.rs  inc_bindings.rs  lib.rs
